# aether

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  go.mod  go.sum  start.sh
.github/workflows/: ci.yml  deploy-docs.yml
cmd/executor/: bench_test.go  bundle.go  bundle_test.go  flashbots.go  flashbots_test.go  gas_oracle.go  gas_oracle_test.go  grpc_integration_test.go  integration_test.go  main.go  main_test.go  metrics.go  metrics_test.go  nonce.go  nonce_test.go  rpc_redact.go  rpc_redact_test.go  shadow_mode_test.go  signer.go  signer_test.go  submitter.go  submitter_test.go  tracing.go
cmd/monitor/: alerter.go  dashboard.go  metrics.go  mev_share.go  mev_share_test.go  tracing.go
cmd/pooldiscovery/: main.go  main_test.go
cmd/risk/: manager.go  state.go
config/: builders.yaml  executor.yaml  nodes.yaml  pools.toml  pools_historical_replay.toml  pools_shadow.toml  pools_staging.toml  risk.yaml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: AetherExecutor.sol
contracts/test/: AetherExecutor.fork.t.sol  AetherExecutor.t.sol  Deploy.t.sol
crates/common/: Cargo.toml
crates/common/src/: db.rs  error.rs  lib.rs  types.rs
crates/detector/: Cargo.toml
crates/detector/benches/: detection.rs
crates/detector/src/: bellman_ford.rs  gas.rs  lib.rs  opportunity.rs  optimizer.rs
crates/grpc-server/: Cargo.toml  build.rs
crates/grpc-server/src/: engine.rs  lib.rs  main.rs  mempool_pipeline.rs  metrics.rs  pipeline.rs  provider.rs  service.rs  tracing_init.rs
crates/grpc-server/tests/: ws_subscription_test.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: config.rs  event_decoder.rs  lib.rs  mempool.rs  node_pool.rs  subscription.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: anvil_fork_test.rs  historical_arb_e2e_test.rs  historical_block_scanner_test.rs  mainnet_fork_e2e_test.rs  mainnet_fork_flashloan_test.rs  multi_block_backtest_test.rs  pipeline_test.rs
crates/integration-tests/tests/common/: mod.rs
crates/pools/: Cargo.toml
crates/pools/src/: balancer.rs  bancor.rs  curve.rs  lib.rs  registry.rs  router_decoder.rs  sushiswap.rs  uniswap_v2.rs  uniswap_v3.rs
crates/simulator/: Cargo.toml
crates/simulator/benches/: simulation.rs
crates/simulator/src/: calldata.rs  fork.rs  lib.rs
crates/state/: Cargo.toml
crates/state/benches/: graph.rs
crates/state/src/: lib.rs  price_graph.rs  snapshot.rs  token_index.rs
deploy/ansible/: inventory.yml  playbook.yml
deploy/docker/: Dockerfile.go  Dockerfile.rust  README.md  alertmanager.yml  canary.Dockerfile  docker-compose.yml  go.Dockerfile  prometheus.yml
deploy/docker/alertmanager/templates/: slack.tmpl
deploy/docker/grafana/dashboards/: builders.json  latency.json  mempool.json  overview.json  risk.json
deploy/docker/grafana/provisioning/dashboards/: default.yml
deploy/docker/grafana/provisioning/datasources/: tempo.yml
deploy/docker/loki/: loki-config.yml
deploy/docker/prometheus/: alerts.yml
deploy/docker/promtail/: promtail-config.yml
deploy/docker/tempo/: tempo-config.yml
deploy/systemd/: aether-go.service  aether-rust.service
docs/: architecture.md  incident-response.md  runbook.md
docs-site/: index.md  package-lock.json  package.json
docs-site/.vitepress/: config.ts
docs-site/.vitepress/theme/: custom.css  index.ts
docs-site/.vitepress/theme/components/: Accordion.vue  AccordionItem.vue  AnimatedCard.vue  Timeline.vue  TimelineItem.vue
docs-site/architecture/: design-decisions.md  go-services.md  grpc-protocol.md  overview.md  rust-core.md  smart-contract.md
docs-site/development/: adding-a-dex.md  contributing.md  testing.md  tooling.md
docs-site/guide/: configuration.md  getting-started.md  how-it-works.md  introduction.md
docs-site/operations/: deployment.md  incident-response.md  monitoring.md  runbook.md
docs-site/reference/: api.md  configuration.md  metrics.md  risk-parameters.md
docs/perf/: cargo-release-profile.md
internal/config/: loader.go  loader_test.go
internal/db/: ledger.go  ledger_pg.go  ledger_test.go  metrics.go
internal/grpc/: client.go
internal/pb/: aether.pb.go  aether_grpc.pb.go
internal/risk/: bench_test.go  classify.go  classify_test.go  manager.go  manager_test.go  state.go  state_test.go  tip_strategy.go  tip_strategy_test.go
internal/testutil/: fixtures.go  mock_arb_server.go
internal/tracing/: tracing.go
migrations/: 0001_trade_ledger.sql  0002_drop_bundles_arb_id_fk.sql
proto/: aether.proto
scripts/: backtest.py  canary.py  check_toolchain_versions.sh  db_migrate.sh  deploy.sh  gas_profiler.py  historical_replay_e2e.sh  mempool_capture.sh  mempool_smoke.sh  monitoring_smoke.sh  shadow_mode_live.sh  staging_test.sh  test_integration.sh
