[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/ingestion",
    "crates/pools",
    "crates/state",
    "crates/detector",
    "crates/simulator",
    "crates/grpc-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Ethereum
alloy = { version = "1", features = ["full"] }
# EVM simulation
revm = { version = "34", default-features = false, features = ["std", "serde"] }
revm-database = { version = "10", default-features = false, features = ["std", "alloydb"] }
# gRPC
tonic = "0.13"
prost = "0.13"
tonic-build = "0.13"
# Data structures
dashmap = "6"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Math
ruint = "1"
# Arc swap for MVCC
arc-swap = "1"
# Config
config = "0.14"
