[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/ingestion",
    "crates/pools",
    "crates/state",
    "crates/detector",
    "crates/simulator",
    "crates/grpc-server",
    "crates/integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Ethereum
alloy = { version = "1", features = ["full"] }
# EVM simulation
revm = { version = "34", default-features = false, features = ["std", "serde", "optional_balance_check", "optional_no_base_fee"] }
revm-database = { version = "10", default-features = false, features = ["std", "alloydb"] }
# gRPC
tonic = "0.13"
prost = "0.13"
tonic-build = "0.13"
prost-build = "0.13"
# Data structures
dashmap = "6"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Distributed tracing (OpenTelemetry OTLP export to Tempo)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"
# Math
ruint = "1"
# Arc swap for MVCC
arc-swap = "1"
# Config
config = "0.14"
serde_yml = "0.0.12"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
