[package]
name = "aether-common"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ruint = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
