[package]
name = "aether-grpc-server"
version.workspace = true
edition.workspace = true

[lib]
name = "aether_grpc_server"
path = "src/lib.rs"

[[bin]]
name = "aether-rust"
path = "src/main.rs"

[dependencies]
aether-common = { path = "../common" }
aether-ingestion = { path = "../ingestion" }
aether-pools = { path = "../pools" }
aether-state = { path = "../state" }
aether-detector = { path = "../detector" }
aether-simulator = { path = "../simulator" }
alloy = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
bytes = "1"
serde = { workspace = true }
toml = { workspace = true }
url = "2"
dotenvy = "0.15.7"
futures = "0.3"
prometheus = "0.13.4"
[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
