[package]
name = "aether-state"
version.workspace = true
edition.workspace = true

[dependencies]
aether-common = { path = "../common" }
aether-pools = { path = "../pools" }
alloy = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
ruint = { workspace = true }
